Fixed Materialize Footer Styling to enable dynamic footer resizing and stop footer cutoff; need to investigate why height limits were originally set

--- a/src/materialize-src/sass/components/_global.scss
+++ b/src/materialize-src/sass/components/_global.scss
@@ -351,8 +351,8 @@ footer.page-footer {
 
   .footer-copyright {
     overflow: hidden;
-    height: 50px;
-    line-height: 50px;
+    //height: 50px; //These two lines commented out due to causing issues with the Footer on Mobile
+    //line-height: 50px;
     color: rgba(255,255,255,.8);
     background-color: rgba(51,51,51,.08);
     @extend .light;
